# Patent-Management-Program

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/: PRIVATE_IMPLEMENTATIONS.md  REDACTION_POLICY.md
sample_data/: patent1.txt
src/: __init__.py  adapters_text.py  extractors.py  interfaces.py  loader.py  pipeline.py
src/patentx/: adapters_pdf_stub.py  adapters_text.py  cli.py  errors.py  logging_format.py  sample program
tests/: test_extractor.py
