[project]
name = "patentx"
version = "0.1.0"
description = "Redaction-safe sample: patent PDF extraction pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="William Meikle" }]
urls = { "Repository" = "https://github.com/wmeikle33/Patent-Management-Program" }

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "pytest-cov", "pre-commit"]
pdf = ["pypdf", "pdfplumber"]

[project.scripts]
patentx = "patentx.cli:main"
