[project]
name = "patentx"
version = "0.1.0"
description = "Redaction-safe sample: patent PDF extraction pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="William Meikle" }]
urls = { "Repository" = "https://github.com/wmeikle33/Patent-Management-Program" }

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "pytest-cov", "pre-commit"]
pdf = ["pypdf", "pdfplumber"]

[project.scripts]
patentx = "patentx.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

# Lint rules (reasonable starter set)
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = []

# If you use src/ layout (you do), this helps imports behave
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["patentx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
