[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patentx"
version = "0.1.0"
description = "Patent Management Program"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]

dependencies = [
  "pandas>=2.0",
  # add your runtime deps here
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-requests",
]

pdf = [
  "pypdf>=4",
  "pdfplumber>=0.11",
]

ocr = [
  "pytesseract>=0.3",
  "pdf2image>=1.17",
  "pillow>=10",
]

[project.scripts]
patentx = "patentx.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
packages = ["patentx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
